# APM

./: .gitignore  build.gradle  readme.md  settings.gradle
apm_battery/: build.gradle
apm_battery/src/androidTest/java/com/cnting/apm_battery/: ExampleInstrumentedTest.kt
apm_battery/src/main/java/com/cnting/apm_battery/: BatteryPlugin.kt
apm_battery/src/test/java/com/cnting/apm_battery/: ExampleUnitTest.kt
apm_bitmap/: build.gradle
apm_bitmap/src/androidTest/java/com/cnting/apm_bitmap/: ExampleInstrumentedTest.kt
apm_bitmap/src/test/java/com/cnting/apm_bitmap/: ExampleUnitTest.kt
apm_crash/: build.gradle
apm_crash/src/main/cpp/: CMakeLists.txt  CrashAnalyser.cpp  CrashAnalyser.h  CrashDefine.h  JNIBridge.cpp  JNIBridge.h  SignalHandler.cpp  SignalHandler.h  Utils.cpp  Utils.h  apm_crash.cpp
apm_io/: build.gradle
apm_io/src/main/cpp/: CMakeLists.txt  apm_io.cpp
apm_io/src/main/cpp/core/: io_canary.cpp  io_canary.h  io_canary_env.h  io_info_collector.cpp  io_info_collector.h
apm_io/src/main/cpp/detector/: detector.cpp  detector.h  main_thread_detector.cpp  main_thread_detector.h  small_buffer_detector.cpp  small_buffer_detector.h
apm_lib/: build.gradle
apm_lib/src/main/: AndroidManifest.xml
apm_lib/src/main/res/layout/: activity_apm_analyze.xml  activity_apm_display.xml  view_display_item.xml
apm_lib_native/: build.gradle
apm_lib_native/src/main/cpp/: CMakeLists.txt  apm_lib_native.cpp
apm_lib_native/src/main/cpp/libxhook/: CMakeLists.txt
apm_lib_native/src/main/cpp/util/: FileUtil.cpp  FileUtil.h  ThreadUtil.cpp  ThreadUtil.h  TimeUtil.cpp  TimeUtil.h  mylog.h
apm_thread/: build.gradle
apm_thread/src/main/cpp/: CMakeLists.txt  apm_thread.cpp  dlopen.c  relocate.c
apm_trace_canary/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  apm.cpp
app/src/main/java/com/example/apm/: App.kt  (+1 more)
app/src/main/res/layout/: activity_crash.xml  activity_crash2.xml  activity_io.xml  activity_main.xml  activity_thread.xml  activity_trace.xml
app/src/main/res/values/: themes.xml
docs/: bitmap.md  crash.md  io.md  memory.md  thread.md  trace.md
(+81 files in other folders)
